- Implemented: Blockly, now possible to use expressions in notifications/email/SMS like "My temperature is {{temperaturedevice[1234]}} degrees" (see http://www.domoticz.com/wiki/Events)
- Implemented: Blockly, now possible to send a notification with a user variable/device as subject/body
- Implemented: Chinese language support, big thanks to wxws!!
- Implemented: CounterType 'Time'
- Implemented: Day display in energy/gas/water/temp report
- Implemented: Dummy Hardware, Option to supply name, sensor is now also directly added to the system
- Implemented: Dummy Hardware, Wind+Temp+Chill
- Implemented: Dummy Hardware, option to create an RGBW switch
- Implemented: Extra timer-schedules: Odd/Even Days, Odd/Even Weeks, Monthly & Yearly
- Implemented: Hardware Monitor for FreeBSD (but it needs the libsysinfo package to work)
- Implemented: Icelandic language support, big thanks to Magnus!!
- Implemented: Log View, added options to display All/Status/Error
- Implemented: Macedonian translation (Big thanks to jocogvg!!!)
- Implemented: MySensors Ethernet gateway will now request the gateway version on startup
- Implemented: MySensors, Implemented V_CUSTOM
- Implemented: MySensors, Option to Enable/Disable using ACK per Child sensor from the MySensors hardware setup page
- Implemented: MySensors, Option to Name a node
- Implemented: Nest Protect
- Implemented: Nest Thermostat, support for multiple thermostats
- Implemented: Netatmo, support for multiple Thermostats
- Implemented: Netatmo, support for multiple weather stations (from the weathermap) and multiple rain sensors
- Implemented: New switch type 'Selector' (big thanks to cgaudry)
- Implemented: OpenZWave, added COMMAND_CLASS_PROTECTION in configuration options
- Implemented: OTGW, added firmware version number in hardware setup page
- Implemented: Option to transfer old Percentage sensors to new Percentage sensors
- Implemented: Philips Hue, support for Groups (create them with an external app like HueMote)