@@ -952,7 +952,7 @@ int cWebem::CountSessions() {
 }
 
 void cWebem::CleanSessions() {
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 	_log.Log(LOG_STATUS, "[web:%s] cleaning sessions...", GetPort().c_str());
 #endif
 	int before = CountSessions();
@@ -1241,7 +1241,7 @@ std::string cWebemRequestHandler::generateSessionID()
 
 	std::string sessionId = GenerateMD5Hash(base64_encode((const unsigned char*)randomValue.c_str(), randomValue.size()));
 
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 	_log.Log(LOG_STATUS, "[web:%s] generate new session id token %s", myWebem->GetPort().c_str(), sessionId.c_str());
 #endif
 
@@ -1261,7 +1261,7 @@ std::string cWebemRequestHandler::generateAuthToken(const WebEmSession & session
 
 	std::string authToken = base64_encode((const unsigned char*)randomValue.c_str(), randomValue.size());
 
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 	_log.Log(LOG_STATUS, "[web:%s] generate new authentication token %s", myWebem->GetPort().c_str(), authToken.c_str());
 #endif
 
@@ -1508,8 +1508,8 @@ bool cWebemRequestHandler::checkAuthToken(WebEmSession & session) {
 		return false;
 	}
 
-#ifdef _DEBUG
-	// _log.Log(LOG_STATUS, "[web:%s] CheckAuthToken(%s_%s_%s) : user authenticated", myWebem->GetPort().c_str(), session.id.c_str(), session.auth_token.c_str(), session.username.c_str());
+#ifdef DEBUG_WWW
+	_log.Log(LOG_STATUS, "[web:%s] CheckAuthToken(%s_%s_%s) : user authenticated", myWebem->GetPort().c_str(), session.id.c_str(), session.auth_token.c_str(), session.username.c_str());
 #endif
 
 	if (session.username.empty()) {
@@ -1531,7 +1531,7 @@ bool cWebemRequestHandler::checkAuthToken(WebEmSession & session) {
 		sessionExpires = session.expires < now;
 
 		if (!userExists || sessionExpires) {
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 			_log.Log(LOG_ERROR, "[web:%s] CheckAuthToken(%s_%s) : cannot restore session, user not found or session expired", myWebem->GetPort().c_str(), session.id.c_str(), session.auth_token.c_str());
 #endif
 			removeAuthToken(session.id);
@@ -1540,7 +1540,7 @@ bool cWebemRequestHandler::checkAuthToken(WebEmSession & session) {
 
 		WebEmSession* oldSession = myWebem->GetSession(session.id);
 		if (oldSession == NULL) {
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 			_log.Log(LOG_STATUS, "[web:%s] CheckAuthToken(%s_%s_%s) : restore session", myWebem->GetPort().c_str(), session.id.c_str(), session.auth_token.c_str(), session.username.c_str());
 #endif
 			myWebem->AddSession(session);
@@ -1633,7 +1633,7 @@ void cWebemRequestHandler::handle_request(const request& req, reply& rep)
 				// Find and include any special cWebem strings
 				if (!myWebem->Include(rep.content)) {
 					if (mInfo.mtime_support && !mInfo.is_modified) {
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 						_log.Log(LOG_STATUS, "[web:%s] %s not modified (1).", myWebem->GetPort().c_str(), req.uri.c_str());
 #endif
 						rep = reply::stock_reply(reply::not_modified);
@@ -1658,7 +1658,7 @@ void cWebemRequestHandler::handle_request(const request& req, reply& rep)
 		{
 			if (mInfo.mtime_support && !mInfo.is_modified) {
 				rep = reply::stock_reply(reply::not_modified);
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 				_log.Log(LOG_STATUS, "[web:%s] %s not modified (2).", myWebem->GetPort().c_str(), req.uri.c_str());
 #endif
 				return;
@@ -1670,7 +1670,7 @@ void cWebemRequestHandler::handle_request(const request& req, reply& rep)
 		else {
 			if (mInfo.mtime_support && !mInfo.is_modified) {
 				rep = reply::stock_reply(reply::not_modified);
-#ifdef _DEBUG
+#ifdef DEBUG_WWW
 				_log.Log(LOG_STATUS, "[web:%s] %s not modified (3).", myWebem->GetPort().c_str(), req.uri.c_str());
 #endif
 				return;
@@ -1701,7 +1701,9 @@ void cWebemRequestHandler::handle_request(const request& req, reply& rep)
 		send_cookie(rep, session);
 
 	} else if (session.forcelogin == true) {
+#ifdef DEBUG_WWW
 		_log.Log(LOG_STATUS, "[web:%s] Logout : remove session %s", myWebem->GetPort().c_str(), session.id.c_str());
+#endif
 		myWebem->RemoveSession(session.id);
 		removeAuthToken(session.id);
 		if (myWebem->m_authmethod == AUTH_BASIC) {
