@@ -25,13 +25,13 @@ class connection_manager
 {
 public:
   /// Add the specified connection to the manager and start it.
-  void start(connection_ptr c);
+  void start(const connection_ptr c);
 
   /// Stop the specified connection.
-  void stop(connection_ptr c);
+  void stop(const connection_ptr c);
 
   /// Stop all connections.
-  void stop_all(bool graceful_stop);
+  void stop_all(const bool graceful_stop);
 
 private:
   /// The managed connections.
