@@ -442,6 +442,7 @@ i18n/domoticz-zh.json
 app/AboutController.js
 app/app.js
 app/CamController.js
+app/CustomController.js
 app/CustomIconsController.js
 app/DashboardController.js
 app/DevicesController.js
@@ -542,6 +543,7 @@ ozwcp/cp.js
 # HTML pages
 views/about.html
 views/cam.html
+views/custom.html
 views/customicons.html
 views/dashboard.html
 views/devices.html
